--- a/WPFPageNavigation/WPFPageNavigation.csproj
+++ b/WPFPageNavigation/WPFPageNavigation.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+    <Folder Include="Fonts\" />
+    <Folder Include="Styles\" />
+  </ItemGroup>
+
 </Project>
